# FIGUrust

./: .gitignore  Cargo.toml  build.rs  flake.nix
figlet-compat/: Cargo.toml
figlet-compat/src/: consts.rs  main.rs  settings.rs  utils.rs
figurust/: Cargo.toml
figurust-bin/: Cargo.toml
figurust-bin/src/: convert.rs  main.rs
figurust/src/: lib.rs  settings.rs  tests.rs
figurust/src/figlet/: chars.rs  font.rs  header.rs  mod.rs
figurust/src/font/: chars.rs  header.rs
src/: font.rs  main.rs  settings.rs  tests.rs  utils.rs
src/font/: chars.rs  header.rs
src/tests/: small.rs
