[package]
name = "figurust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4.23"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
termsize = "0.1.6"
