[package]
name = "figurust-bin"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
serde.workspace = true
ron.workspace = true

figurust = { path = "../figurust" }
