[package]
name = "figurust"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4.23"

[dependencies]
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
execute.workspace = true
itertools = "0.10.5"
